implement the scope and singleton object resolver